# src/controllers/auth.controller.ts
@@ -22,7 +22,27 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Password must contain at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      },
+    )
+    .test(
+      "at-least-one-number",
+      "Password must contain at least one number",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      },
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password")], "Passwords must match"),
@@ -30,6 +50,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#components/schemas/RegisterRequest"}
+     }
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -64,6 +91,7 @@ export default {
   },
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody = {
       required: true,
       schema: {$ref: "#components/schemas/LoginRequest"}
@@ -80,6 +108,7 @@ export default {
             email: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -119,6 +148,7 @@ export default {
   },
   async me(req: IReqUser, res: Response) {
     /**
+      #swagger.tags = ['Auth']
       #swagger.security = [{
         "bearerAuth" = []
       }]
@@ -135,6 +165,45 @@ export default {
     } catch (error) {
       const err = error as unknown as Error;
 
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#components/schemas/ActivationRequest"}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      if (!code) {
+        return res.status(400).json({
+          message: "Activation code is required",
+        });
+      }
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        { new: true },
+      );
+
+      res.status(200).json({
+        message: "User activated successfully",
+        data: user,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
       res.status(400).json({
         message: err.message,
         data: null,
