# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendEmail } from "../utils/mail/mail";
+import { CLIENT_HOST } from "../utils/env";
 
 export interface User {
   fullName: string;
@@ -10,6 +12,7 @@ export interface User {
   profilePicture: string;
   isActive: boolean;
   activationCode: string;
+  createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
@@ -23,10 +26,12 @@ const UserSchema = new Schema<User>(
     username: {
       type: Schema.Types.String,
       required: true,
+      unique: true,
     },
     email: {
       type: Schema.Types.String,
       required: true,
+      unique: true,
     },
     password: {
       type: Schema.Types.String,
@@ -43,7 +48,7 @@ const UserSchema = new Schema<User>(
     },
     isActive: {
       type: Schema.Types.Boolean,
-      default: true,
+      default: false,
     },
     activationCode: {
       type: Schema.Types.String,
@@ -51,24 +56,50 @@ const UserSchema = new Schema<User>(
   },
   {
     timestamps: true,
-  }
+  },
 );
 
 UserSchema.pre("save", function (next) {
   const user = this;
 
   user.password = encrypt(user.password);
+  user.activationCode = encrypt(user.id);
 
   next();
 });
 
+UserSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+
+    const contentMail = await renderMailHtml("registration-success.ejs", {
+      username: user.username,
+      fullname: user.fullName,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+
+    await sendEmail({
+      from: "ahmadibni007@gmail.com",
+      to: user.email,
+      subject: "Aktivasi Akun Anda",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.error(error);
+  } finally {
+    next();
+  }
+});
+
 UserSchema.methods.toJSON = function () {
   const user = this.toObject();
-  
+
   delete user.password;
 
   return user;
-}
+};
 
 const UserModel = mongoose.model<User>("User", UserSchema);
 
